--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,15 @@
 
 		"trees:pine:small:stump":"file(entities/trees/pine_stump/small_pine_stump.json)",
 		"trees:pine:medium:stump":"file(entities/trees/pine_stump/medium_pine_stump.json)",
-		"trees:pine:large:stump":"file(entities/trees/pine_stump/large_pine_stump.json)"
+		"trees:pine:large:stump":"file(entities/trees/pine_stump/large_pine_stump.json)",
+
+		"trees:bend_palm:large:stump": "file(entities/trees/bend_palm_tree/large_bend_palm_tree/large_bend_palm_stump.json)",
+		"trees:bend_palm:small:stump": "file(entities/trees/bend_palm_tree/small_bend_palm_tree/small_bend_palm_stump.json)",
+		"trees:dranden:small:stump": "file(entities/trees/dranden/dranden_stump.json)",
+		"trees:palm:large:stump": "file(entities/trees/palm_tree/large_palm_tree/large_palm_stump.json)",
+		"trees:palm:small:stump": "file(entities/trees/palm_tree/small_palm_tree/small_palm_stump.json)",
+		"trees:papaya:stump": "file(entities/trees/papaya/papaya_stump.json)",
+		"trees:smalea:small:stump": "file(entities/trees/smalea/smalea_stump.json)"
 	}, 
 	"mixintos" : {
 		"stonehearth:mixins:tree":"file(components/add_stump.json)",
@@ -36,7 +44,16 @@
 
 		"stonehearth:trees:pine:small":"file(entities/trees/pine_tree/small_pine_tree.json)",
 		"stonehearth:trees:pine:medium":"file(entities/trees/pine_tree/medium_pine_tree.json)",
-		"stonehearth:trees:pine:large":"file(entities/trees/pine_tree/large_pine_tree.json)"
+		"stonehearth:trees:pine:large":"file(entities/trees/pine_tree/large_pine_tree.json)",
+
+		"archipelago_biome:trees:bend_palm:large":	"file(entities/trees/bend_palm_tree/large_bend_palm_tree)",
+		"archipelago_biome:trees:bend_palm:small":	"file(entities/trees/bend_palm_tree/small_bend_palm_tree)",
+		"archipelago_biome:trees:dranden:small":	"file(entities/trees/dranden)",
+		"archipelago_biome:trees:palm:large":		"file(entities/trees/palm_tree/large_palm_tree)",
+		"archipelago_biome:trees:palm:small":		"file(entities/trees/palm_tree/small_palm_tree)",
+		"archipelago_biome:trees:palm:sapling":		"file(entities/trees/palm_tree/sapling_palm_tree)",
+		"archipelago_biome:trees:papaya":			"file(entities/trees/papaya)",
+		"archipelago_biome:trees:smalea:small":		"file(entities/trees/smalea)"
 	},
 	"components": {
 		"add_stump":"file(components/add_stump.lua)"
