Adds default stump to any tree, Steam launch
Now all trees will have a stump. Those without a specific stump model will have a generic model.

--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,34 @@
 {
 	"info" : {
-		"name" : "tree_stump", 
-		"version" : 3
+		"name" : "Tree Stumps",
+		"namespace" : "tree_stump",
+		"version" : 3,
+		"steam_file_id" : "1432254757"
 	},
 	"default_locale":"en",
 	"aliases" : {
 		"trees:acacia:small:stump":"file(entities/trees/acacia_stump/small_acacia_stump.json)",
 		"trees:acacia:large:stump":"file(entities/trees/acacia_stump/large_acacia_stump.json)",
 
-		"trees:juniper:small:stump":"file(entities/trees/juniper_stump/small_juniper_stump.json)",
-		"trees:juniper:medium:stump":"file(entities/trees/juniper_stump/medium_juniper_stump.json)",
-		"trees:juniper:large:stump":"file(entities/trees/juniper_stump/large_juniper_stump.json)",
+		"trees:juniper:small:stump":	"file(entities/trees/juniper_stump/small_juniper_stump.json)",
+		"trees:juniper:medium:stump":	"file(entities/trees/juniper_stump/medium_juniper_stump.json)",
+		"trees:juniper:large:stump":	"file(entities/trees/juniper_stump/large_juniper_stump.json)",
 
-		"trees:oak:small:stump":"file(entities/trees/oak_stump/small_oak_stump.json)",
-		"trees:oak:medium:stump":"file(entities/trees/oak_stump/medium_oak_stump.json)",
-		"trees:oak:large:stump":"file(entities/trees/oak_stump/large_oak_stump.json)",
+		"trees:oak:small:stump":	"file(entities/trees/oak_stump/small_oak_stump.json)",
+		"trees:oak:medium:stump":	"file(entities/trees/oak_stump/medium_oak_stump.json)",
+		"trees:oak:large:stump":	"file(entities/trees/oak_stump/large_oak_stump.json)",
 
-		"trees:pine:small:stump":"file(entities/trees/pine_stump/small_pine_stump.json)",
-		"trees:pine:medium:stump":"file(entities/trees/pine_stump/medium_pine_stump.json)",
-		"trees:pine:large:stump":"file(entities/trees/pine_stump/large_pine_stump.json)",
+		"trees:pine:small:stump":	"file(entities/trees/pine_stump/small_pine_stump.json)",
+		"trees:pine:medium:stump":	"file(entities/trees/pine_stump/medium_pine_stump.json)",
+		"trees:pine:large:stump":	"file(entities/trees/pine_stump/large_pine_stump.json)",
 
-		"trees:bend_palm:large:stump": "file(entities/trees/bend_palm_tree/large_bend_palm_tree/large_bend_palm_stump.json)",
-		"trees:bend_palm:small:stump": "file(entities/trees/bend_palm_tree/small_bend_palm_tree/small_bend_palm_stump.json)",
-		"trees:dranden:small:stump": "file(entities/trees/dranden/dranden_stump.json)",
-		"trees:palm:large:stump": "file(entities/trees/palm_tree/large_palm_tree/large_palm_stump.json)",
-		"trees:palm:small:stump": "file(entities/trees/palm_tree/small_palm_tree/small_palm_stump.json)",
-		"trees:papaya:stump": "file(entities/trees/papaya/papaya_stump.json)",
-		"trees:smalea:small:stump": "file(entities/trees/smalea/smalea_stump.json)"
+		"trees:bend_palm:large:stump":"file(entities/trees/bend_palm_tree/large_bend_palm_tree/large_bend_palm_stump.json)",
+		"trees:bend_palm:small:stump":"file(entities/trees/bend_palm_tree/small_bend_palm_tree/small_bend_palm_stump.json)",
+		"trees:dranden:small:stump":"file(entities/trees/dranden/dranden_stump.json)",
+		"trees:palm:large:stump":"file(entities/trees/palm_tree/large_palm_tree/large_palm_stump.json)",
+		"trees:palm:small:stump":"file(entities/trees/palm_tree/small_palm_tree/small_palm_stump.json)",
+		"trees:papaya:stump":"file(entities/trees/papaya/papaya_stump.json)",
+		"trees:smalea:small:stump":"file(entities/trees/smalea/smalea_stump.json)"
 	}, 
 	"mixintos" : {
 		"stonehearth:mixins:tree":"file(components/add_stump.json)",
@@ -34,17 +36,37 @@
 		"stonehearth:trees:acacia:small":"file(entities/trees/acacia_tree/small_acacia_tree.json)",
 		"stonehearth:trees:acacia:large":"file(entities/trees/acacia_tree/large_acacia_tree.json)",
 
-		"stonehearth:trees:juniper:small":"file(entities/trees/juniper_tree/small_juniper_tree.json)",
-		"stonehearth:trees:juniper:medium":"file(entities/trees/juniper_tree/medium_juniper_tree.json)",
-		"stonehearth:trees:juniper:large":"file(entities/trees/juniper_tree/large_juniper_tree.json)",
+		"stonehearth:trees:juniper:small":	"file(entities/trees/juniper_tree/small_juniper_tree.json)",
+		"stonehearth:trees:juniper:medium":	"file(entities/trees/juniper_tree/medium_juniper_tree.json)",
+		"stonehearth:trees:juniper:large":	"file(entities/trees/juniper_tree/large_juniper_tree.json)",
 
-		"stonehearth:trees:oak:small":"file(entities/trees/oak_tree/small_oak_tree.json)",
-		"stonehearth:trees:oak:medium":"file(entities/trees/oak_tree/medium_oak_tree.json)",
-		"stonehearth:trees:oak:large":"file(entities/trees/oak_tree/large_oak_tree.json)",
+		"stonehearth:trees:gold:juniper:small":	"file(entities/trees/juniper_tree/small_juniper_tree.json)",
+		"stonehearth:trees:gold:juniper:medium":"file(entities/trees/juniper_tree/medium_juniper_tree.json)",
+		"stonehearth:trees:gold:juniper:large":	"file(entities/trees/juniper_tree/large_juniper_tree.json)",
 
-		"stonehearth:trees:pine:small":"file(entities/trees/pine_tree/small_pine_tree.json)",
+		"stonehearth:trees:snowy:juniper:small":	"file(entities/trees/juniper_tree/small_juniper_tree.json)",
+		"stonehearth:trees:snowy:juniper:medium":	"file(entities/trees/juniper_tree/medium_juniper_tree.json)",
+		"stonehearth:trees:snowy:juniper:large":	"file(entities/trees/juniper_tree/large_juniper_tree.json)",
+
+		"stonehearth:trees:oak:small":	"file(entities/trees/oak_tree/small_oak_tree.json)",
+		"stonehearth:trees:oak:medium":	"file(entities/trees/oak_tree/medium_oak_tree.json)",
+		"stonehearth:trees:oak:large":	"file(entities/trees/oak_tree/large_oak_tree.json)",
+
+		"stonehearth:trees:pine:small":	"file(entities/trees/pine_tree/small_pine_tree.json)",
 		"stonehearth:trees:pine:medium":"file(entities/trees/pine_tree/medium_pine_tree.json)",
-		"stonehearth:trees:pine:large":"file(entities/trees/pine_tree/large_pine_tree.json)",
+		"stonehearth:trees:pine:large":	"file(entities/trees/pine_tree/large_pine_tree.json)",
+
+		"stonehearth:trees:gold:pine:small":	"file(entities/trees/pine_tree/small_pine_tree.json)",
+		"stonehearth:trees:gold:pine:medium":	"file(entities/trees/pine_tree/medium_pine_tree.json)",
+		"stonehearth:trees:gold:pine:large":	"file(entities/trees/pine_tree/large_pine_tree.json)",
+
+		"stonehearth:trees:silver:pine:small":	"file(entities/trees/pine_tree/small_pine_tree.json)",
+		"stonehearth:trees:silver:pine:medium":	"file(entities/trees/pine_tree/medium_pine_tree.json)",
+		"stonehearth:trees:silver:pine:large":	"file(entities/trees/pine_tree/large_pine_tree.json)",
+
+		"stonehearth:trees:snowy:pine:small":	"file(entities/trees/pine_tree/small_pine_tree.json)",
+		"stonehearth:trees:snowy:pine:medium":	"file(entities/trees/pine_tree/medium_pine_tree.json)",
+		"stonehearth:trees:snowy:pine:large":	"file(entities/trees/pine_tree/large_pine_tree.json)",
 
 		"archipelago_biome:trees:bend_palm:large":	"file(entities/trees/bend_palm_tree/large_bend_palm_tree)",
 		"archipelago_biome:trees:bend_palm:small":	"file(entities/trees/bend_palm_tree/small_bend_palm_tree)",
